# genmcp

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  STAGE1_COMPLETE.md  STAGE1_HTTP_COMPLETE.md  STAGE1_REMAINING.md  STAGE2_COMPLETE.md  STAGE2_DELIVERABLE.md  z.sh
.windsurf/: rules
mcp-cli/: Cargo.toml
mcp-cli/src/: main.rs
mcp-common/src/: messages.rs  types.rs
mcp-common/tests/: ipc_integration_tests.rs  messages_tests.rs  types_tests.rs
mcp-core/: Cargo.toml  README.md  config.json
mcp-core/src/: client.rs  error.rs  interceptor.rs  lib.rs  validation.rs
mcp-core/src/messages/: core.rs  initialization.rs  logging.rs  mod.rs  prompts.rs  resources.rs  sampling.rs  tools.rs
mcp-core/src/transport/: config.rs  factory.rs  http_sse.rs  http_stream.rs  mod.rs  stdio.rs
mcp-llm/: Cargo.toml  build.rs
mcp-llm/include/: wrapper.h
mcp-llm/include/runtime/conversation/model_data_processor/: gemma3_data_processor.cc  gemma3_data_processor_test.cc
mcp-llm/include/runtime/core/: engine_impl.cc  engine_impl_test.cc  engine_legacy_impl.cc
mcp-llm/include/runtime/engine/: engine_settings_test.cc  litert_lm_advanced_main.cc  shared_flags.cc  shared_flags.h
mcp-llm/include/runtime/util/: scoped_file_posix.cc  test_utils.h
mcp-llm/migrations/: 001_initial.sql
mcp-llm/src/: conversation_context.rs  dspy_signatures.rs  error.rs  gepa_optimizer.rs  interceptor.rs  lib.rs  litert_wrapper.rs  lm_provider.rs  metrics.rs  predictors.rs  routing_modes.rs  session_management.rs  signatures.rs
mcp-llm/src/database/: metrics.rs  predictions.rs  routing_rules.rs  schema.rs
mcp-transport/: Cargo.toml
mcp-transport/src/: http_handler.rs  lib.rs  main.rs  proxy.rs  stdio_handler.rs  transport_config.rs
mcp-transport/src/interceptors/: logging.rs  mod.rs  rate_limit.rs  transform.rs  validation.rs
mcp-transport/tests/: buffered_ipc_client_tests.rs  interceptor_integration_tests.rs  stdio_handler_tests.rs
mcp-tui/: Cargo.toml  LAST_MILE.md
mcp-tui/src/: activity_feed.rs  app.rs  clients_panel.rs  components.rs  events.rs  lib.rs  main.rs  query_input.rs  quick_access.rs  servers_panel.rs  ui.rs
mcp-ui/: Cargo.toml
mcp-ui/src/: app.rs  lib.rs  main.rs  search.rs  ui.rs
mcp-ui/tests/: app_tests.rs
tests/: Cargo.toml  lib.rs
tests/common/: helpers.rs  mod.rs  python_server.rs  test_server.rs
tests/e2e/: full_system_tests.rs
tests/integration/: llm_integration_tests.rs  mod.rs  transport_core_tests.rs
