[workspace]
members = [
    "mcp-core",
    "mcp-common",
    "mcp-proxy",
    "mcp-monitor",
    "mcp-trace",
    "tests"
]
resolver = "2"

[workspace.dependencies]
# Core async and runtime
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
bytes = "1.5"
url = "2.5"

# HTTP and networking (from mcp-probe)
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"

# TUI dependencies
ratatui = "0.24"
crossterm = "0.27"

# Config
toml = "0.8"
humantime-serde = "1.1"

# Pin utilities
pin-project-lite = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

