[package]
name = "mcp-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for Assist MCP - Intelligent MCP proxy with monitoring"
license = "MIT"
readme = "../README.md"
keywords = ["mcp", "debug", "monitor", "tui", "proxy"]
categories = ["command-line-utilities", "development-tools::debugging"]

[package.metadata.dist]
dist = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
mcp-tui = { path = "../mcp-tui" }
mcp-transport = { path = "../mcp-transport" }
