[package]
name = "mcp-llm"
version = "0.1.0"
edition = "2021"
description = "LLM integration for assist-mcp with LiteRT-LM and DSPy-RS"

[dependencies]
# Core dependencies (from workspace)
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

# LiteRT-LM C bindings
libc = "0.2"

# Async and streaming
tokio-stream = { workspace = true }

# Error handling and validation
derive_more = { version = "1.0", features = ["display", "error", "from"] }

# Internal dependencies
mcp-common = { path = "../mcp-common" }

[build-dependencies]
bindgen = "0.70"

[features]
default = []
debug-bindings = []

[lib]
name = "mcp_llm"
path = "src/lib.rs"

[[bin]]
name = "llm-test"
path = "src/bin/test.rs"