[package]
name = "assist-mcp-e2e-tests"
version = "0.2.0"
edition = "2021"

[dependencies]
mcp-common = { path = "../mcp-common" }
mcp-transport = { path = "../mcp-transport" }
mcp-ui = { path = "../mcp-ui" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.0"

[[test]]
name = "e2e_tests"
path = "e2e/mod.rs"